// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Controller - Create should throw validation error when name is number 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "name must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`User Controller - Create should throw validation error when password is number 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "password must be longer than or equal to 8 characters",
    "password must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`User Controller - Create should throw validation error when password is shorter than 8 characters 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "password must be longer than or equal to 8 characters",
  ],
  "statusCode": 400,
}
`;
